# evb_omm

./: README.md  dev_notes.md  setup.cfg
envs/: evb.yml
evb/: cli.py  evb.py  reporter.py  sim.py  task.py  utils.py  yml_run.py
evb/scripts/: run_evb.py  run_md.py
example/: cal_energy.py  energy_plot.ipynb  mp_gmx.top  mr_gmx.top  simple.yml
